fixed bug of screen footer size on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -1187,7 +1187,7 @@ html, body {
     justify-content: center;
     align-items: start;
     width: 100%;
-    height: 30px;
+    height: 40px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 9px;
     color: #ffffff70;
